--- a/views/about.html
+++ b/views/about.html
@@ -20,17 +20,17 @@
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient shadow mb-3">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="/">Zhirrr's API</a>
+      <a class="navbar-brand fw-bold" href="/">Fxc7 APIs</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="https://docs-api-zahirr.herokuapp.com/">API</a>
+            <a class="nav-link active" aria-current="page" href="https://api-fxc7.herokuapp.com/">API</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="https://docs-api-zahirr.herokuapp.com/about">About</a>
+            <a class="nav-link active" aria-current="page" href="https://fxc7-api.herokuapp.com/about">About</a>
           </li>
         </ul>
       </div>
@@ -41,10 +41,15 @@
       <h2 class="card-header shadow-sm bg-primary text-white">About Me</h2>
       <div class="card-body">
       <div class="text-center">
-        <img src="https://avatars.githubusercontent.com/u/75620279" class="rounded-circle shadow mb-3" alt="Zhirrr" width="150px" height="150px">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaaG_5bw8mJRn-8hT9KhzvJ5biPlj-q1Qzxw&usqp=CAU" class="rounded-circle shadow mb-3" alt="Fxc7" width="150px" height="150px">
       </div>
-        <p class="card-text text-shadow">Web API Ini dibuat oleh saya sepenuhnya oleh saya juga beberapa bantuan teman saya.<br/>Umur saya baru 13 tahun dan masih menjadi seorang pelajar di SMPN 279 Jakarta Utara<br/>Senang dari kecil tentang programming<br/>Belajar programming Otodidak, mulai dari YouTube dan web2 lainnya<br/>
-        Dengan nama asli saya <b>Zahir Hadi Athallah</b><br/>Bahasa pemrograman yang saya ketahui hanya sedikit, yaitu (HTML/CSS/JavaScript), Python, Java, dan C#<b/><br/>Rest API ini juga dalam tahap pengembangan, jadi mohon doa dan dukungannya. semoga bisa bermanfaat untuk banyak orang<br/>Terimakasih.</p>
+     <p class="card-text text-shadow">Web Rest Api<br></p>
+     <b><i><h1>Thanks To</h1></i></b>
+     <h6><i>> Zhirr (Create Rest Api)</i></h6>
+     <h6><i>> Manurios</i></h6>
+     <h6><i>> Wawan</i></h6>
+      <h6><i>> Rakha</i></h6>
+     <h6><i>> FXC7 Team</i></h6>
       </div>
     </div>
   </div>
