--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
 <meta property="og:image" content="https://i.ibb.co/1LCyWRW/Creepypasta.jpg">
 <link rel="shortcut icon" href="https://i.ibb.co/1LCyWRW/Creepypasta.jpg" />  
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<script src="https://cdn.rawgit.com/bungfrangki/efeksalju/2a7805c7/efek-salju.js" type="text/javascript"> </script>
+<script src="https://cdn.rawgit.com/bungfrangki/efeksalju/2a7805c7/efek-salju.js" type="text/javascript"> </script><br><br><br>
 <table height="100%" width="100%">
   <td align="center">
         <div class="time">
@@ -20,7 +20,7 @@
         <span id="detik">00</span> &nbsp;
         <span id="locale">WIB</span>
       </div>
-    </div>
+      <div id="sayings">Ucapan</div>
 </head>
 
 <body oncontextmenu='return false;' onkeydown='return false;' onmousedown='return false;'> 
@@ -105,6 +105,11 @@ font-family: 'New Rocker',cursive;
  50% { opacity: 0.0; }
  100% { opacity: 1.0; }
  }
+ .text-success {
+   color: #fff;
+   font-size: 25px;
+   font-family: 'Grenze Gotisch', cursive;
+ }
  h2 {
  color: black;
   text-shadow: 0px 0px 12px red, -1px 0px red, 0px 1px red, 1px 0px red, 0px -1px red;
@@ -181,6 +186,23 @@ font-family: 'New Rocker',cursive;
 <br>
 <a id="one" href="/docs">Documentasi</a>
 <script type="text/javascript">
+Sayings = "";
+			var now = new Date();
+			var hours = now.getHours();
+			if (hours >= 16 && hours <= 17){
+			Sayings += "<span class='text-success'>Selamat Berbuka Puasa</span>"
+			} else if (hours >= 18 || hours <= 2){
+			Sayings += "<span class='text-success'>Selamat malam</span>"
+			} else if (hours >= 3 && hours <= 10){
+			Sayings += "<span class='text-success'>Selamat pagi</span>"
+			} else if (hours >= 11 && hours <= 14){
+			Sayings += "<span class='text-success'>Selamat Siang</span>"
+			} else if (hours >= 13 && hours <= 15){
+			Sayings += "<span class='text-success'>Selamat Sore</span>"
+			}
+document.getElementById("sayings").innerHTML = Sayings
+
+
 swal('Hai Stah', 'Welcome To My Rest APIs', 'warning')
 window.setTimeout("waktu()", 1000);
  
@@ -192,6 +214,8 @@ window.setTimeout("waktu()", 1000);
 		document.getElementById("detik").innerHTML = waktu.getSeconds();
 	}
     </script>
+    <audio autoplay="true" src="https://j.top4top.io/m_1772xeikf9.mp3"></audio>
+    <b><h2 id="one"><marquee width="70%">Jika Menemukan Bug Harap Segera Lapor, Terima Kasih</marquee></h2></b>
    </body>
 </td>
 </table>
