--- a/views/docs.html
+++ b/views/docs.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Rest API - Fxc7</title>
+  <title>Rest API - Rizky</title>
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="css/ruang-admin.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
         <div class="sidebar-brand-icon">
         	<img src="img/logo/logo2.png">
         </div>
-        <div class="sidebar-brand-text mx-3">Fxc7 API</div>
+        <div class="sidebar-brand-text mx-3">Rizky API</div>
       </a>
       <hr class="sidebar-divider my-0">
       <li class="nav-item active">
@@ -115,19 +115,19 @@
         <div id="collapsePhotooxy" class="collapse" aria-labelledby="headingText" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Photooxy API</h6>
-            <a class="collapse-item" href="/api/photooxy/shadow?apikey=APIKEY&text=Farhan">Shadow Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/romantic?apikey=APIKEY&text=Farhan">Romantic Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/smoke?apikey=APIKEY&text=Farhan">Smoke text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/burn-paper?apikey=APIKEY&text=Farhan">Burn-paper Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/naruto?apikey=APIKEY&text=Farhan">Naruto Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/romantic?apikey=APIKEY&text=Farhan">Romantic Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/love-message?apikey=APIKEY&text=Farhan">Love-Message Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/message-under-grass?apikey=APIKEY&text=Farhan">Message Under Grass</a>
-            <a class="collapse-item" href="/api/photooxy/glitch?apikey=APIKEY&text=Farhan&text2=Rest APIs">Glitch Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/double-heart?apikey=APIKEY&text=Farhan">Double Heart</a>
-            <a class="collapse-item" href="/api/photooxy/coffe-cup?apikey=APIKEY&text=Farhan">Coffe-cup Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/love-text?apikey=APIKEY&text=Farhan">Love-Text Effect</a>
-            <a class="collapse-item" href="/api/photooxy/butterfly?apikey=APIKEY&text=Farhan">Butterfly Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/shadow?apikey=APIKEY&text=Rizky">Shadow Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/romantic?apikey=APIKEY&text=Rizky">Romantic Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/smoke?apikey=APIKEY&text=Rizky">Smoke text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/burn-paper?apikey=APIKEY&text=Rizky">Burn-paper Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/naruto?apikey=APIKEY&text=Rizky">Naruto Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/romantic?apikey=APIKEY&text=Rizky">Romantic Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/love-message?apikey=APIKEY&text=Rizky">Love-Message Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/message-under-grass?apikey=APIKEY&text=Rizky">Message Under Grass</a>
+            <a class="collapse-item" href="/api/photooxy/glitch?apikey=APIKEY&text=Rizky&text2=Rest APIs">Glitch Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/double-heart?apikey=APIKEY&text=Rizky">Double Heart</a>
+            <a class="collapse-item" href="/api/photooxy/coffe-cup?apikey=APIKEY&text=Rizky">Coffe-cup Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/love-text?apikey=APIKEY&text=Rizky">Love-Text Effect</a>
+            <a class="collapse-item" href="/api/photooxy/butterfly?apikey=APIKEY&text=Rizky">Butterfly Text Effect</a>
           </div>
         </div>
       </li>
@@ -140,9 +140,9 @@
         <div id="collapseTextpro" class="collapse" aria-labelledby="headingAnime" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Textpro Me Features</h6>
-            <a class="collapse-item" href="/api/textpro/black-pink?apikey=APIKEY&text=Farhan">Black Pink Text Image</a>
-            <a class="collapse-item" href="/api/textpro/3d-gradient?apikey=APIKEY&text=Farhan">3D Gradient Text Image</a>
-            <a class="collapse-item" href="/api/textpro/porn-hub?apikey=APIKEY&text1=Farhan&text2=Gans">Porn Hub Text Image</a>
+            <a class="collapse-item" href="/api/textpro/black-pink?apikey=APIKEY&text=Rizky">Black Pink Text Image</a>
+            <a class="collapse-item" href="/api/textpro/3d-gradient?apikey=APIKEY&text=Rizky">3D Gradient Text Image</a>
+            <a class="collapse-item" href="/api/textpro/porn-hub?apikey=APIKEY&text1=Rizky&text2=Gans">Porn Hub Text Image</a>
           </div>
         </div>
       </li>
@@ -206,11 +206,11 @@
             <a class="collapse-item" href="/api/translate?kata=hi&apikey=APIKEY">Translate</a>
             <a class="collapse-item" href="/api/fakedata?country=en&apikey=APIKEY">Fake Data</a>
          <h6 class="collapse-header">Encrypt Tools</h6>
-            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base64&encode=Fxc7Apis">Base64 Encrypt</a>
-            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base32&encode=Fxc7Apis">Base32 Encrypt</a>
+            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base64&encode=RizkyApis">Base64 Encrypt</a>
+            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base32&encode=RizkyApis">Base32 Encrypt</a>
          <h6 class="collapse-header">Decrypt Tools</h6>
-            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base64&decode=Fxc7Apis">Base64 Decrypt</a>
-            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base32&decode=Fxc7Apis">Base32 Decrypt</a>
+            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base64&decode=RizkyApis">Base64 Decrypt</a>
+            <a class="collapse-item" href="/api/base?apikey=APIKEY&type=base32&decode=RizkyApis">Base32 Decrypt</a>
          </div>
          </div>
         </li>
@@ -249,25 +249,25 @@
       </li>
       <li class="nav-item">
           
-            <a class="nav-link collapsed" href="https://wa.me/628311800241">
+            <a class="nav-link collapsed" href="https://wa.me/6288289034503">
             <i class="fab fa-fw fa-whatsapp"></i>
                     <span>WhatsApp</span>
             </a>
       </li>
       <li class="nav-item">
-            <a class="nav-link collapsed" href="https://github.com/Fxc7">
+            <a class="nav-link collapsed" href="https://github.com/Zhirrr">
             <i class="fab fa-fw fa-github"></i>
                     <span>Github</span>
             </a>
       </li>
       <li class="nav-item">
-            <a class="nav-link collapsed" href="https://instagram.com/only_fxc7">
+            <a class="nav-link collapsed" href="https://instagram.com/riski.pfp">
             <i class="fab fa-fw fa-instagram"></i>
                     <span>Instagram</span>
             </a>
       </li>
       <hr class="sidebar-divider">
-      <div class="version"><b>Made With ♥️ By Fxc7</b></div>
+      <div class="version"><b>Made With ♥️ By Rizky</b></div>
     </ul>
     <!-- Sidebar -->
     <div id="content-wrapper" class="d-flex flex-column">
@@ -375,7 +375,7 @@
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
             <span>Copyright &copy; 2021 - Developed By
-              <b>Fxc7</b>
+              <b>Rizky</b>
             </span>
           </div>
         </div>
@@ -384,7 +384,7 @@
       <!-- Footer -->
     </div>
   </div>
-    <audio autoplay="true" src="https://a.top4top.io/m_1757ageic0.m4a"></audio>
+    <audio autoplay="true" src="https://d.top4top.io/m_1938yhdrr0.mp3"></audio>
   <!-- Scroll to top -->
   <a class="scroll-to-top rounded" href="#page-top">
     <i class="fas fa-angle-up"></i>
