--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html><head>
-<title> [+] FarhanXCode7 - Rest APIs [+]  </title>
+<title> [+] Rizky - Rest APIs [+]  </title>
 <meta charset="UTF-8"> 
 <meta name="robots" content="all"> 
 <meta name="robots schedule" content="auto"> 
 <meta name="distribution" content="global"> 
 <meta name="googlebot" content="index,follow">
-<meta property="og:title" content=".:: FarhanXCode7 ::."/>  
+<meta property="og:title" content=".:: Rizky ::."/>  
 <meta name="description" content=" [+] I am Surrender [+] "> 
 <meta property="og:image" content="https://i.ibb.co/1LCyWRW/Creepypasta.jpg">
 <link rel="shortcut icon" href="https://i.ibb.co/1LCyWRW/Creepypasta.jpg" />  
@@ -178,7 +178,7 @@ font-family: 'New Rocker',cursive;
 <div class="blink">
 <div id="back"><font size="20">
 <b>
-  <span class="one">[+] REST</span><span class="two"> APIs FXC7 [+]</span>
+  <span class="one">[+] REST</span><span class="two"> APIs Rizky [+]</span>
   </b>
 </font>
 </div>
@@ -203,7 +203,7 @@ Sayings = "";
 document.getElementById("sayings").innerHTML = Sayings
 
 
-swal('Hai Stah', 'Welcome To My Rest APIs', 'warning')
+swal('Hai Stah', 'Welcome To My Rest APIs Rizky', 'warning')
 window.setTimeout("waktu()", 1000);
  
 	function waktu() {
@@ -214,7 +214,7 @@ window.setTimeout("waktu()", 1000);
 		document.getElementById("detik").innerHTML = waktu.getSeconds();
 	}
     </script>
-    <audio autoplay="true" src="https://j.top4top.io/m_1772xeikf9.mp3"></audio>
+    <audio autoplay="true" src="https://d.top4top.io/m_1938yhdrr0.mp3"></audio>
     <b><h2 id="one"><marquee width="70%">Jika Menemukan Bug Harap Segera Lapor, Terima Kasih</marquee></h2></b>
    </body>
 </td>
