--- a/views/about.html
+++ b/views/about.html
@@ -20,17 +20,17 @@
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient shadow mb-3">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="/">Fxc7 APIs</a>
+      <a class="navbar-brand fw-bold" href="/">Rizky APIs</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="https://api-fxc7.herokuapp.com/">API</a>
+            <a class="nav-link active" aria-current="page" href="https://rizky-xyz.herokuapp.com/">API</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="https://fxc7-api.herokuapp.com/about">About</a>
+            <a class="nav-link active" aria-current="page" href="https://rizky-xyz.herokuapp.com/about">About</a>
           </li>
         </ul>
       </div>
@@ -50,6 +50,7 @@
      <h6><i>> Wawan</i></h6>
       <h6><i>> Rakha</i></h6>
      <h6><i>> FXC7 Team</i></h6>
+     <h6><i>> Rizky </i></h6>
       </div>
     </div>
   </div>
