--- a/views/about.html
+++ b/views/about.html
@@ -41,7 +41,7 @@
       <h2 class="card-header shadow-sm bg-primary text-white">About Me</h2>
       <div class="card-body">
       <div class="text-center">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaaG_5bw8mJRn-8hT9KhzvJ5biPlj-q1Qzxw&usqp=CAU" class="rounded-circle shadow mb-3" alt="Fxc7" width="150px" height="150px">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaaG_5bw8mJRn-8hT9KhzvJ5biPlj-q1Qzxw&usqp=CAU" class="rounded-circle shadow mb-3" alt="Rizky" width="150px" height="150px">
       </div>
      <p class="card-text text-shadow">Web Rest Api<br></p>
      <b><i><h1>Thanks To</h1></i></b>
