--- a/views/docs.html
+++ b/views/docs.html
@@ -386,6 +386,9 @@
   </div>
     <audio autoplay="true" src="https://d.top4top.io/m_1938yhdrr0.mp3"></audio>
   <!-- Scroll to top -->
+    
+{ Swal.fire("INFO", "Apikey : rizkydev, Costum Apikey? Chat Me Via Whatsapp :D", "");});
+</script>
   <a class="scroll-to-top rounded" href="#page-top">
     <i class="fas fa-angle-up"></i>
   </a>
